@@ -9,7 +9,7 @@
                            bill@newbreedsoftware.com
                    http://www.newbreedsoftware.com/tuxpaint/
 
-                          June 14, 2002 - May 30, 2004
+                          June 14, 2002 - June 5, 2004
 
      ----------------------------------------------------------------------
 
@@ -386,7 +386,7 @@ Options
                      |--------------------+------------------+---------|
                      |catalan             |catala            |         |
                      |--------------------+------------------+---------|
-                     |chinese             |                  |         |
+                     |chinese             |simplified-chinese|         |
                      |--------------------+------------------+---------|
                      |croatian            |hrvatski          |         |
                      |--------------------+------------------+---------|
@@ -444,9 +444,11 @@ Options
                      |--------------------+------------------+---------|
                      |tamil               |                  |         |
                      |--------------------+------------------+---------|
-                     |vietnamese          |                  |         |
+                     |traditional-chinese |                  |         |
                      |--------------------+------------------+---------|
                      |turkish             |                  |         |
+                     |--------------------+------------------+---------|
+                     |vietnamese          |                  |         |
                      |--------------------+------------------+---------|
                      |walloon             |walon             |         |
                      |--------------------+------------------+---------|
