@@ -23,7 +23,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>June 14, 2002 - May 30, 2004</p>
+<p>June 14, 2002 - June 5, 2004</p>
 </center>
 
 <hr size=2 noshade>
@@ -518,7 +518,7 @@ New Breed Software</p>
 	  </tr>
 	  <tr>
 	    <td><code>chinese</code></td>
-	    <td>&nbsp;</td>
+	    <td><code>simplified-chinese</code></td>
 	    <td>&nbsp;</td>
 	  </tr>
 	  <tr>
@@ -662,12 +662,17 @@ New Breed Software</p>
 	    <td>&nbsp;</td>
 	  </tr>
 	  <tr>
-	    <td><code>vietnamese</code></td>
+	    <td><code>traditional-chinese</code></td>
 	    <td>&nbsp;</td>
 	    <td>&nbsp;</td>
 	  </tr>
 	  <tr>
 	    <td><code>turkish</code></td>
+	    <td>&nbsp;</td>
+	    <td>&nbsp;</td>
+	  </tr>
+	  <tr>
+	    <td><code>vietnamese</code></td>
 	    <td>&nbsp;</td>
 	    <td>&nbsp;</td>
 	  </tr>
