@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2004.05.30
-.TH TUXPAINT 1 "30 May 2004" "0.9.14" "Tux Paint"
+.\" tuxpaint.1 - 2004.06.05
+.TH TUXPAINT 1 "05 Jun 2004" "0.9.14" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
@@ -278,7 +278,7 @@ british | british-english
 catalan | catala
 .TP 2
 -
-chinese
+chinese | simplified-chinese
 .TP 2
 -
 croatian | hrvatski
@@ -357,6 +357,9 @@ swedish | svenska
 .TP 2
 -
 tamil
+.TP 2
+-
+traditional-chinese
 .TP 2
 -
 turkish
@@ -469,6 +472,7 @@ Sam "Criswell" Hart,
 Tedi Heriyanto,
 Pjetur G. Hjaltason,
 Knut Erik Hollund,
+Song Huang,
 Karl Ove Hufthammer,
 Roland Illig,
 Juan Irigoien,
